--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -62,7 +62,7 @@ ul.task-list input[type="checkbox"] {
   }
 
   .card-body {
-    padding: 1.25rem;
+    padding: 1.5rem;
   }
 }
 
@@ -146,8 +146,11 @@ ul.task-list input[type="checkbox"] {
 .projects {
   a {
     text-decoration: none;
+    background-image: none;
 
     &:hover {
+      background-image: none;
+
       .card-title {
         color: var(--global-theme-color);
       }
@@ -171,7 +174,7 @@ ul.task-list input[type="checkbox"] {
   }
 
   h2.category {
-    color: var(--global-divider-color);
+    color: var(--global-text-color-light);
     border-bottom: 1px solid var(--global-divider-color);
     padding-top: 0.5rem;
     margin-top: 2rem;
